fix: gap issue on the movile view wiht .review-main

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -324,5 +324,7 @@ section.faq-section {
   height: 300px;
   overflow-y: auto;
 }
-
+.review-main {
+  margin-top: 2rem;
+}
 }
